fix: toast button alignment

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -423,6 +423,7 @@ kbd {
 
 .SonnerToast {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 0.5rem;
     background-color: var(--colBg);
